--- a/build.yaml
+++ b/build.yaml
@@ -21,3 +21,7 @@ include:
   - board: nice_nano_v2
     shield: qaz
     snippet: studio-rpc-usb-uart
+  - board: willis
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
+    artifact-name: willis_studio
